[package]
name = "tcp-echo-server"
version = "0.1.0"
authors = ["Hiroaki Nakamura <hnakamur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
listenfd = "0.3.3"
tokio = { version = "0.2", features = ["full"] }
